[gd_scene load_steps=3 format=3 uid="uid://hle0smp6iat1"]

[ext_resource type="Script" path="res://scenes/EnemySpawner.gd" id="1_ukoyj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cr8lt"]

[node name="EnemySpawner" type="Area2D"]
script = ExtResource("1_ukoyj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_cr8lt")

[node name="SpawnTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
